--- a/css/main.css
+++ b/css/main.css
@@ -67,3 +67,21 @@ padding: 110px;
   background: linear-gradient(to bottom, #ffffff 70%,#0fabff 125%);
   border-color: #000756;
 }
+.Footer_Background{
+  color: #ffffff;
+  background-image: url("/images/Footer002.jpg")
+  
+}
+
+.social-icons{
+  width: 50px;
+  height: 50px;
+  border-radius: 10%;
+  float: left;
+  line-height: 20px;
+  font-size: 10px;
+  color: #000;
+  background: white;
+  margin-right: 25px;
+  cursor: pointer;
+}
