--- a/css/mycart.css
+++ b/css/mycart.css
@@ -4,9 +4,9 @@
     margin-right: 20px;
  
 }
-.bgimg-1{
+body{
   background-image: url("/images/Bg_1.jpg");
-  max-height: 500px;
+
 }
 .bgimg-1, .bgimg-2, .bgimg-3 {
   position: relative;
@@ -35,39 +35,46 @@
   }
 h1{
   color: blanchedalmond;
-  font-size: 55px;
-  padding: 50px 130px 0;
+  font-size: 5vw;
+  padding: 5vw 8vw 0;
 }
 .box-1{
   background-color: #8d8d8d;
   height:fit-content;
-  width: 70%;
+  width: 30vw;
+  height: 7vw;
+  position: absolute;
+  top: 90%; ;
+
 }
 .check-1{
-  width: 500px;
-  padding: 25px;
+  width: 30vw;
+  align-content: center;
+  padding: 1vw;
+  position: absolute;
+  top: 10%; ;
 }
 .ff{
   display: flex;
-  margin: 30px 0;
-  font-size: 24px;
+  margin: 1% 0;
+  font-size: 2vw;
 }
 label{
   position: relative;
-  width: 30px;
-  height: 50px;
+  width: 3vw;
+  height: 5vw;
 }
 input{
-  width: 73%;
-  height: 70%;
+  width: 3vw;
+  height: 3vw;
 }
 .box-2{
   background-color:#8d8d8d;
   height: fit-content;
   width: 25%;
   position: absolute;
-  top: 340px; ;
-  right: 50px; ;
+  top: 90%; ;
+  right: 5vw;
  
 
 }
@@ -76,8 +83,8 @@ input{
   height: fit-content;
   width: 25%;
   position: absolute;
-  top: 650px;
-  right: 50px;
+  top: 150%;
+  right: 5vw;
 }
 .check-2{
   width: max-content;
