--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -1,36 +1,331 @@
 .coustom-items{
-    color: aqua;
-    font-size: 25px;
-    margin-right: 20px;
-  
-  }
-  .bgimg-1{
-  background-image: url("/images/Bg_1.jpg");
-  max-height: 500px;
-  }
-  .bgimg-1{
-  position: relative;
-  background-attachment: fill;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size:cover;
-  }
-  .navbar-toggler {
-    color: rgba(255, 255, 255, 0.205);
-    border-color: rgba(255, 255, 255, 0.829);
-  }
-  
-  .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255, 0.5)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
-  }
-  .btn-coustom {
-    color: #000;
-    background-color:aqua;
-    border-color: #002956;
-  }
-  .btn-coustom:hover {
-    color: #ffffff;
-    background-color: #000000;
-    border-color: #000000;
-  }
-  
+  color: aqua;
+  font-size: 25px;
+  margin-right: 20px;
+
+}
+.bgimg-1{
+background-image: url("/images/Bg_1.jpg");
+max-height: 500px;
+}
+.bgimg-1{
+position: relative;
+background-attachment: fill;
+background-position: center;
+background-repeat: no-repeat;
+background-size:cover;
+}
+.navbar-toggler {
+  color: rgba(255, 255, 255, 0.205);
+  border-color: rgba(255, 255, 255, 0.829);
+}
+
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255, 0.5)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+.btn-coustom {
+  color: #000;
+  background-color:aqua;
+  border-color: #002956;
+}
+.btn-coustom:hover {
+  color: #ffffff;
+  background-color: #000000;
+  border-color: #000000;
+}
+/* font-family: 'Tilt Neon', sans-serif; */
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Tilt+Neon&display=swap');
+
+
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Tilt Neon', sans-serif;
+}
+
+body{
+    min-height: 100vh;
+    background-size: cover;
+    background-position: center;
+    background-image: url('image/Canon\ R5.jpg');
+    background-size: 200px;
+    background-repeat: no-repeat;
+    background-attachment: fixed;  
+}
+
+.navbar-custom{
+    background-color: #222831;
+    opacity: 0.99;
+}
+
+.collapse{
+    color: white;
+}
+
+.nav-icon{
+    align-items: center;
+}
+.nav-icon i {
+    margin-right: 5px;
+    padding: 10px;
+}
+
+.nav-center{
+    text-align: center;
+}
+
+.nav-item{
+    padding: 10px;
+}
+
+.nav-item:hover .nav-link{
+	color: #00adb5 !important;
+}
+
+.nav-link{
+	color: #f9f4f4 !important;
+	font-weight: 500;
+    transition: all 200ms linear;
+}
+.nav-item:after{
+	position: absolute;
+	bottom: -5px;
+	left: 0;
+	width: 100%;
+	height: 2px;
+	content: '';
+	background-color: #00adb5;
+	opacity: 0;
+    transition: all 200ms linear;
+}
+.nav-item:hover:after{
+	bottom: 0;
+	opacity: 2;
+}
+
+.nav-item.active:hover:after{
+	opacity: 0;
+}
+.nav-item{
+	position: relative;
+    transition: all 200ms linear;
+}
+
+.dropdown-item{
+    margin-top: 10px;
+}
+
+input[type=search]{
+    width: 40px;
+    height: 38px;
+    padding: 8px 20px 8px 45px;
+    border: #fff solid 2px;
+    font-size: 18px;
+    border-radius: 25px;
+    background-position: 2% 50%;
+    background-repeat: no-repeat;
+    background-size: 20px;
+    background-image: url('image/search.png');
+    background-color: transparent;
+    transition: 0.5s all ease-in-out;
+    filter: brightness(170%);
+    border: none;
+}
+
+input[type=search]:focus,
+input[type=search]:not(:placeholder-shown){
+    width: 350px;
+    background-color: #fff;
+    filter: brightness(100%);
+}
+
+
+/* header */
+
+
+fieldset{
+    background-color: black;
+    color: white;
+    width: 70%;
+    justify-content: center;
+    border-width: 0%;
+    margin-top: 10%;
+    border-radius: 40px;
+}
+
+body{
+    background-image: url("/image/");
+    background-position: center;
+    background-attachment: fixed;
+    background-size:cover;
+    background-repeat: no-repeat;
+}
+
+.custom-background{
+    background-color: black;
+    opacity: 0.65;
+    
+}
+
+.heading{
+    color: white;
+    text-align: center;
+    margin-top: 3%;
+}
+
+.discription{
+    margin-top: 3%;
+    text-align: justify;
+    font-size: 90%;
+    margin-bottom: 4%;
+}
+
+.topic-members{
+    text-align: center;
+}
+
+/* cards */
+
+.row{
+    justify-content: center;
+}
+
+.hover {
+    overflow: hidden;
+    position: relative;
+    padding-bottom: 60%;
+}
+
+.hover-overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 90;
+    transition: all 0.4s;
+}
+
+.hover img {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all 0.3s;
+}
+
+.hover-content {
+    position: relative;
+    z-index: 99;
+}
+
+
+/* DEMO 1 ============================== */
+.hover-1 img {
+    width: 105%;
+    position: absolute;
+    top: 0;
+    left: -5%;
+    transition: all 0.3s;
+
+}
+
+.hover-1-content {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 99;
+    transition: all 0.4s;
+}
+
+.hover-1-content img {
+    margin-left: 75px;
+    margin-top: -50px;
+    height: 60px;
+
+}
+
+.hover-1 .hover-overlay {
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.hover-1-description {
+    transform: translateY(0.5rem);
+    transition: all 0.4s;
+    opacity: 0;
+}
+
+.hover-1:hover .hover-1-content {
+    bottom: 2rem;
+}
+
+.hover-1:hover .hover-1-description {
+    opacity: 1;
+    transform: none;
+}
+
+.hover-1:hover img {
+    left: 0;
+}
+
+.hover-1:hover .hover-overlay {
+    opacity: 0;
+}
+
+
+
+/* footer */
+.list-inline-item .btn-floating{
+    font-size: 23px;
+}
+
+.footerbg{
+    background-color: #222831;
+}
+
+.col-md-3 p{
+    text-align: left;
+    margin-left: 20px;
+}
+
+.col-md-4{
+    text-align: left;
+    
+}
+
+
+
+
+
+/* Responsive */
+
+@media (max-width: 990px){
+    .row .col-lg-5{
+        width: 500px;
+    }
+}
+
+
+@media (max-width: 768px) {
+    body{
+        padding-top:100px ;
+    }
+
+    .navbar{
+        top: 0;
+    }
+
+    .col-md-4{
+        text-align: center;
+    }
+
+    .col-md-3 p{
+        text-align: center;
+    }
+
+    .row .col-lg-5{
+        width: 500px;
+    }
+}
