--- a/css/contactus.css
+++ b/css/contactus.css
@@ -106,3 +106,92 @@ section{
     font-size: 1em;
 }
 
+.contact-form{
+    background-color: #fff;
+    padding: 40px;
+    width: 45%;
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+
+.contact-form h2{
+    font-weight: bold;
+    font-size: 2em;
+    margin-bottom: 10px;
+    color: #333;
+}
+
+.contact-form .input-box{
+    position: relative;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.contact-form .input-box input,
+.contact-form .input-box textarea{
+    width: 100%;
+    padding: 5px 0;
+    font-size: 16px;
+    margin: 10px 0;
+    border: none;
+    border-bottom: 2px solid #333;
+    outline: none;
+    resize: none;
+}
+
+.contact-form .input-box span{
+    position: relative;
+    left: 0;
+    padding: 5px 0;
+    font-size: 16px;
+    margin: 10px;
+    pointer-events: none;
+    transition: 0.5s;
+    color: #666;
+}
+
+.contact-form .input-box input:focus~ span,
+.contact-form .input-box textarea:focus ~ span{
+    color: #e91e63;
+    font-size: 12px;
+    transform: translate(-20px);
+}
+
+.contact-form .input-box input
+[type="submit"] {
+    width: 100%;
+    background: #00bc44;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+    border: none;
+    font-size: 18px;
+    border: 1px solid #00bc44;
+    transition: 0.5s;
+}
+
+.contact-form .input-box input[type="submit"]:hover {
+    background: #fff;
+    color : #00bcd4;
+}
+
+@media (max-width: 991px){
+    section {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+
+    .row{
+        flex-direction: column;
+    }
+
+    .contact-info{
+        margin-bottom: 40px;
+        width: 100%;
+}
+
+.contact-form{
+    width: 100%;
+}
+}
