--- a/css/mycart.css
+++ b/css/mycart.css
@@ -1,256 +1,53 @@
 .coustom-items{
-    color: aqua;
-    font-size: 25px;
-    margin-right: 20px;
- 
+  color: aqua;
+  font-size: 25px;
+  margin-right: 20px;
+
 }
-body{
-  background-image: url("/images/Bg_1.jpg");
+.bgimg-1{
+background-image: url("/images/Bg_1.jpg");
 
 }
 .bgimg-1, .bgimg-2, .bgimg-3 {
-  position: relative;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+position: relative;
+background-attachment: fixed;
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
 }
 .navbar-toggler {
-    color: rgba(255, 255, 255, 0.205);
-    border-color: rgba(255, 255, 255, 0.829);
-  }
+  color: rgba(255, 255, 255, 0.205);
+  border-color: rgba(255, 255, 255, 0.829);
+}
 
 .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255, 0.5)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
-  }
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255, 0.5)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
 .btn-coustom {
-    color: #000;
-    background-color:aqua;
-    border-color: #002956;
-  }
+  color: #000;
+  background-color:aqua;
+  border-color: #002956;
+}
 .btn-coustom:hover {
-    color: #ffffff;
-    background-color: #000000;
-    border-color: #000000;
-  }
+  color: #ffffff;
+  background-color: #000000;
+  border-color: #000000;
+}
 h1{
-  color: blanchedalmond;
-  font-size: 5vw;
-  padding: 5vw 8vw 0;
+color: blanchedalmond;
+font-size: 5vw;
+padding: 5vw 8vw 0;
 }
-.box-1{
-  background-color: #8d8d8d;
-  height:fit-content;
-  width: 30vw;
-  height: 7vw;
-  position: absolute;
-  top: 90%; ;
-
-}
-.check-1{
-  width: 30vw;
-  align-content: center;
-  padding: 1vw;
-  position: absolute;
-  top: 10%; ;
-}
-.ff{
-  display: flex;
-  margin: 1% 0;
-  font-size: 2vw;
-}
-label{
-  position: relative;
-  width: 3vw;
-  height: 5vw;
-}
-input{
-  width: 3vw;
-  height: 3vw;
-}
-.box-2{
-  background-color:#8d8d8d;
-  height: fit-content;
-  width: 25%;
-  position: absolute;
-  top: 90%; ;
-  right: 5vw;
- 
-
-}
-.box-3{
-  background-color: #8d8d8d;
-  height: fit-content;
-  width: 25%;
-  position: absolute;
-  top: 150%;
-  right: 5vw;
-}
-.check-2{
-  width: max-content;
-  padding: 0px;
+fieldset{
+background-color: antiquewhite;
+border-radius: 5px;
 }
 
-
-/* .check-1{
-  display: flex;
+.field-2{
+background-color: #ffffff;
+margin-left: 30px;
+margin-right: 30px;
 }
-.check-text{
-  font-size: 25px;
-  padding: 0px 0px;
+.Select{
+display: flex;
 }
-.check-btn1{
-  padding: 10px 50px;
-} */
-/* 
-footer{
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  background-image: url(/images/Footer002.jpg);
-  color: #fff;
-  padding: 30px 100px 0px;
-  border-top-right-radius: 125px;
-  font-size: 13px;
-  line-height: 20px;
-}
-.img-icon-env{
-  margin-right: 20px;
-  margin-left: 5px;
-}
-.img-icon-envelop{
-  width: 5%;
-  height: 5%;
-  margin-right: 40px;
-  margin-left: 5px;
-}
-
-.row{
-  width: 85%;
-  margin: auto;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  justify-content: space-between;
-}
-.col{
-  flex-basis: 25%;
-  padding: 10px;
-}
-.logo{
-  width: 80px;
-  margin-bottom: 30px;
-}
-.col h3{
-  width: fit-content;
-  margin-bottom: 40px;
-  position: relative;
-}
-.email-id{
-  text-align: center;
-  margin-top: 105px;
-  
-}
-ul li{
-  list-style: none;
-  margin-bottom: 10px;
-}
-ul li a{
-  text-decoration: none;
-  color: #fff;
-}
-form{
-  padding-bottom: 15px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  border-bottom: 1px solid #ccc;
-  margin-bottom: 50px;
-}
-form.far{
-
-  font-size: 18px;
-  margin-right: 10px;
-}
-form input{
-  justify-content: space-between;
-  width: 1000%;
-  background: transparent;
-  color: #ccc;
-  border: 0;
-  outline: none;
-}
-form button{
-  background: transparent;
-  border: 0;
-  outline: none;
-  cursor: pointer;
-}
-.social-icons{
-  width: 40px;
-  height: 40px;
-  float: left;
-  margin-right: 50px;
-  cursor: pointer;
-}
-.col-logo{
-  flex-basis: 25%;
-  padding: 10px;
-
-}
-
-.f-logo{
-  margin-top: 50px;
-  margin-left: 150px;
-  width: 100%;
-  height: 100%;
-}
-.f-logo2{
-  margin-top: 50px;
-  margin-left: 150px;
-  width: 100%;
-  height: 100%;
-}
-hr{
-  width: 90%;
-  border: 0;
-  border-bottom: 1px solid #ccc;
-  margin: 20px auto;
-}
-.copyright{
-  text-align: center;
-}
-.underline{
-  width: 100%;
-  height: 5px;
-  background: #767676;
-  border-radius: 3px;
-  position: absolute;
-  top: 35px;
-  left: 0;
-  overflow: hidden;
-}
-.underline span{
-  width: 15px;
-  height: 100%;
-  background: #fff;
-  border-radius: 3px;
-  position: absolute;
-  top: 0;
-  left: 10px;
-  animation: moving 2s linear infinite;
-}
-@keyframes moving{
-0%{
-  left: -20px;
-}
-100%{
-  left: 100%;
-}
-}
-.cus {
-  width: 1500px;
-  height: 1350px;
-margin-left: 12.5%;
-}
- */
