--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,26 @@
     background-color: #000000;
     border-color: #000000;
   }
+.btn-2{
+  color: #000;
+    background-color:aqua;
+    border-color: #002956;
+}
+.btn-2:hover{
+  color: #ffffff;
+    background-color: #000000;
+    border-color: #000000;
+}
+.btn-3{
+    color: #000;
+    background-color:aqua;
+    border-color: #002956;
+}
+.btn-3:hover{
+    color: #000;
+    background-color:aqua;
+    border-color: #002956;
+}
   /* Carousel */
 .carousel-inner {
     padding: 1em;
